samples/_failures_safe/1761073817_98cfce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_566ab00f.c: In function ‘main’:
./samples/SAFE/__tmp_566ab00f.c:193:22: error: expected ‘;’ at end of input
  193 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_566ab00f.c:193:5: error: expected declaration or statement at end of input
  193 |     for (int i = 0; i
      |     ^~~
